server: list eds cds
