# api/sidecar.go
@@ -74,3 +74,35 @@ func ListEDS(ctx *gin.Context) {
 	}
 	ResponseData(ctx, CodeSuccess, eds)
 }
+
+// ListCDS
+// @Description 获取边车的CDS(集群配置)
+// @Summary  获取边车的CDS(集群配置)
+// @Tags 	sidecar
+// @Param	id			query		int64		true		"id"
+// @Param	namespace	query		string		true		"namespace"
+// @Param	pod			query		string		true		"pod"
+// @Success 200 {object} Result  "ok"
+// @Router /sidecar/cds/list [get]
+func ListCDS(ctx *gin.Context) {
+	idStr := ctx.Query("id")
+	id, err := strconv.ParseInt(idStr, 10, 64)
+	if err != nil {
+		ResponseError(ctx, http.StatusBadRequest, err)
+		return
+	}
+
+	kubeConfig, err := model.KubeConfigDB.GetKubeConfigById(id)
+	if err != nil {
+		ResponseData(ctx, CodeDbError, nil)
+		return
+	}
+
+	cds, err := sidecar.NewSidecar(kube.GetConfigStoreKubeConfig(kubeConfig)).
+		GetCDS(ctx.Query("namespace"), ctx.Query("pod"))
+	if err != nil {
+		Response(ctx, http.StatusOK, CodeKubeConnectError, err.Error(), nil)
+		return
+	}
+	ResponseData(ctx, CodeSuccess, cds)
+}
